--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,24 @@ text-align: center;
 border: 2px solid rgb(92, 57, 33);
 box-shadow: 4px;
 margin: 5px;
+
+
 }
+
+.gallery2 img{
+    margin: 12px;
+}
+.gallery2{
+    background-color: rgb(255, 236, 252);
+    display: inline-block;
+    color: rgb(137, 43, 71);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    border: 2px solid rgb(92, 57, 33);
+    box-shadow: 4px;
+    margin: 5px;
+
+    }
 
 .description{
     margin: 10px;
