--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,13 @@ align-items: center;
 background-color: rgb(139, 97, 82);
 }
 
+
+
 .logo
 {display: inline;
 color: beige;
 text-align: center;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .gallery img{
@@ -19,7 +22,6 @@ color: rgb(110, 46, 46);
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 text-align: center;
 border: 2px solid rgb(92, 57, 33);
-box-shadow: 4px;
 margin: 5px;
 
 
@@ -42,4 +44,5 @@ margin: 5px;
 
 .description{
     margin: 10px;
+
 }
