--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@ margin: 5px;
     background-color: rgb(255, 236, 252);
     display: inline-block;
     color: rgb(137, 43, 71);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
     text-align: center;
     border: 2px solid rgb(92, 57, 33);
     box-shadow: 4px;
