--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,19 @@ text-align: center;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.cameras{
+    text-align: center;
+    margin: 10px;
+}
+.cameras img{
+    margin: 4px;
+}
+
+.container{
+position: relative;
+text-align: center;
+}
+
 .gallery img{
     margin: 12px;
 }
